sample/msvc/error/c2734.cpp
// C2734.cpp
const int j;   // C2734
extern const int i;   // OK, declared as extern
